--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js"
@@ -9,8 +8,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "hbs": "^4.0.6",
     "request": "^2.88.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hatemachine01/weather-app.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Hatemachine01/weather-app/issues"
+  },
+  "homepage": "https://github.com/Hatemachine01/weather-app#readme",
+  "description": ""
 }
